2019-05-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix invalid text iterators on rapid input
	* Menu item context menu for deletion and update of meta modes
	* Do not require confirmation on deletion of variables and history bookmarks from context menu

2019-05-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* History bookmarks and protect (from disappearing of the end of the list) option

2019-05-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Show result in different number bases, in place of menus over keypad, when programming keypad is used

2019-05-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Insert date dialog (from Edit menu and expression popup menu)
	* Long press/right-click/middle-click actions on buttons in keypad
	* "x =" button, and e on separate button in general left keypad
	* New keypad buttons for moving cursor and cycling through expression history
	* Move percent and raise buttons to the keypad on the right side, and add +/- button
	* Add code() and char() to bases button menu, and rand() to mean button menu
	* Request integer in dialog for root() and similar
	* Do not show insert function dialog for button functions with two arguments

2019-04-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Programming keypad
	* Input base selection in expression popup menu

2019-04-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Keypad in number bases dialog (related to issue #93)
	* More unobtrusive warnings and errors in number bases dialog
	* Bitwise operators and functions in number bases button menu

2019-04-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Input ⊻ (XOR) unsing Ctrl+^ or just ^ (if selected in preferences)
	* Do not show 0x prefix for hexadecimal numbers in result
	* ⊻ symbol for XOR

2019-04-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Recognize "factor" and "expand" commands at the beginning of the expression

2019-04-24 Hanna Knutsson <hanna.knutsson@protonmail.com>
